⬆️ JDK sürümü 21'e yükseltildi